# SoftRender

./: CMakeLists.txt  README.md  main.cpp
core/: Rasterizer.cpp  Rasterizer.h  TGAImage.h  geometry.h  model.h
data/models/: ChessPlayer01.FBX
examples/: example0.cpp  example1.cpp
examples/01_Creating_a_window/: CMakeLists.txt  main.cpp
examples/02_Hello_Triangle/: CMakeLists.txt  main.cpp
examples/03_Shaders/: CMakeLists.txt  main.cpp
math/: math.hpp
platform/: window.cpp  window.h
renderer/: CMakeLists.txt  Image.cpp  Image.h  RenderDevice.cpp  RenderDevice.h  Sampler2D.cpp  Sampler2D.h  Shader.h  Texture.cpp  Texture.h  main.cpp
renderer/include/renderer/: data_types.h  fragment_shader.h  render_device.h  renderer.h  shader.h  vertex_array.h  vertex_buffer.h  vertex_shader.h
renderer/src/: fragment_shader.cpp  render_context.cpp  render_context.h  render_device_impl.cpp  render_device_impl.h  renderer.cpp  renderer_untils.hpp  vertex_array_impl.cpp  vertex_array_impl.h  vertex_buffer_impl.cpp  vertex_buffer_impl.h  vertex_shader.cpp
test/: main.cpp
